--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "homepage": "https://github.com/veighnsche/pipe#readme",
   "license": "MIT",
   "main": "index.js",
-  "name": "@veighsnche/pipe",
+  "name": "@veighnsche/pipe",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/veighnsche/pipe.git"
